--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 twine = ">=1.13.0"
 gsenha = {editable = true,path = "."}
 flake8 = "*"
+pytest = "*"
+pytest-cov = "*"
 
 [packages]
 
