--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,20 @@ python:
 # command to install dependencies
 install:
   - make install
+
 # command to run tests
 script:
   - make test
+
+before_deploy: sed -i "s/version=\".*\"/version=\"$TRAVIS_TAG\"/g" setup.py
+
+deploy:
+  provider: pypi
+  user: $PYPI_USER
+  password: $PYPI_PASSWORD
+  skip_cleanup: true
+  skip_existing: true
+  on:
+    branch: master
+    tags: true
+    condition: $TRAVIS_PYTHON_VERSION = "3.6"
